# generation-of-fiber-orientations--restricted-and-hindered-diffusion-coefficients

src/: CMakeLists.txt  Counter.cc  Counter.h  CounterStatistics.cc  CounterStatistics.h  Cylinder.cc  Cylinder.h  DisplayFunc.h  Entropy.h  FiberODF_Common.cc  FiberODF_Common.h  FiberOrientation.h  FiberSegment.cc  FiberSegment.h  FiberSegmentExtractor.cc  FiberSegmentExtractor.h  GaussianOnSphere.cc  GaussianOnSphere.h  Icosahedron.vtk  README.txt  SphereIkosahedron.h  Stats.h  VolumeCounter.cc  VolumeCounter.h  main.cc  main.xml  testHindered.cpp
src/Common/: CMakeLists.txt  IndexValuePair.h  Makefile  cmake_install.cmake
src/Common/.svn/: all-wcprops  entries
src/Common/.svn/text-base/: Exception.cc.svn-base  Exception.h.svn-base  IndexValuePair.cc.svn-base
src/Geometry/: Geometry_Common.cc  Geometry_Common.h  Makefile  Matrix.cc  Point.cc  Sphere.cc  Sphere.h  Triangle.cc  Triangle.h  Vector.cc  Vector.h  cmake_install.cmake
src/Geometry/.svn/: all-wcprops  entries
src/Geometry/.svn/text-base/: CMakeLists.txt.svn-base  Matrix.h.svn-base  Point.h.svn-base
